--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 /*=============== GOOGLE FONTS ===============*/
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=League+Spartan:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Spartan:wght@400;500;600;700&display=swap');
 
 /*=============== VARIABLES CSS ===============*/
 :root {
@@ -21,7 +21,7 @@
   /*========== Font and typography ==========*/
   /* .5rem = 8px | 1rem = 16px ... */
   --body-font: 'Lato', sans-serif;
-  --second-font: 'League Spartan', sans-serif;
+  --second-font: 'Spartan', sans-serif;
   --big-font-size: 3.5rem;
   --h1-font-size: 2.75rem;
   --h2-font-size: 2rem;
@@ -116,7 +116,30 @@ input {
 .container {
   max-width: 1320px;
   margin-inline: auto;
+  margin: 0 2rem;
   padding-inline: 0.75rem;
+}
+
+.grid {
+  display: grid;
+  gap: 1.5rem;
+}
+
+.section {
+  padding-block: 2rem;
+}
+
+.section-lg {
+  padding-block: 4rem;
+}
+
+.section-title {
+  font-size: var(--h4-font-size);
+  margin-bottom: 1.5rem;
+}
+
+.section-title span {
+  color: var(--first-color);
 }
 
 .form-input {
@@ -171,6 +194,7 @@ input {
   height: calc(var(--header-height) + 2.5rem);
   justify-content: space-between;
   column-gap: 1rem;
+  margin-top: 0.5rem;
 }
 
 .nav-logo-img {
@@ -242,18 +266,233 @@ input {
 }
 
 /*=============== HOME ===============*/
+.home-container {
+  grid-template-columns: 5fr 7fr;
+  align-items: center;
+}
+
+.home-subtitle,
+.home-description {
+  font-size: var(--large-font-size);
+}
+
+.home-subtitle {
+  font-family: var(--second-font);
+  font-weight: var(--weight-600);
+  margin-bottom: 1rem;
+  display: block;
+}
+
+.home-title {
+  font-size: var(--h1-font-size);
+  font-weight: var(--weight-700);
+  line-height: 1.4;
+}
+
+.home-title span {
+  color: var(--first-color);
+  font-size: var(--big-font-size);
+}
+
+.home-description {
+  margin-block: 0.5rem 2rem;
+}
+
+.home-img {
+  justify-self: flex-end;
+}
 
 /*=============== BUTTONS ===============*/
+.btn {
+  display: inline-block;
+  background: var(--first-color);
+  border: 2px solid var(--first-color);
+  color: var(--body-color);
+  padding-inline: 1.75rem;
+  height: 49px;
+  line-height: 49px;
+  border-radius: 0.25rem;
+  font-family: var(--second-font);
+  font-size: var(--small-font-size);
+  font-weight: var(--weight-700);
+  transition: all 0.4s var(--transition);
+}
+
+.btn:hover {
+  background: transparent;
+  color: var(--first-color);
+}
 
 /*=============== CATEGORIES ===============*/
+.category-item {
+  text-align: center;
+  border: 1px  solid var(--border-color);
+  padding: 0.625rem 0.625rem 1.25rem;
+  border-radius: 1.25rem;
+}
+
+.category-img {
+  border-radius: 0.75rem;
+  margin-bottom: 1.25rem;
+}
+
+.category-title {
+  color: var(--text-color);
+  font-size: var(--small-font-size);
+}
 
 /* Swiper class */
+.swiper {
+  overflow: initial;
+}
+
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  content: '';
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  top: -1.875rem;
+  background: var(--first-color-alt);
+  border: 1px solid var(--border-color);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  color: var(--first-color);
+  font-size: var(--tiny-font-size);
+}
+
+.swiper-button-next {
+  right: 0;
+}
+
+.swiper-button-prev {
+  left: initial;
+  right: 2.5rem;
+}
 
 /*=============== PRODUCTS ===============*/
+.tab-btns {
+  display: flex;
+  column-gap: 0.75rem;
+  margin-bottom: 2rem;
+}
+
+.tab-btn {
+  background: var(--container-color);
+  color: var(--title-color);
+  padding: 1rem 1.25rem 0.875rem;
+  border-radius: 0.25rem;
+  font-family: var(--second-font);
+  font-size: var(--small-font-size);
+  font-weight: var(--weight-600);
+  cursor: pointer;
+}
+
+.products-container {
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.product-item {
+  border: 1px solid var(--border-color);
+  border-radius: 1.5rem;
+}
+
+.product-banner {
+  padding: 0.625rem 0.75rem 0.75rem;
+  position: relative;
+}
+
+.product-images {
+  position: relative;
+  display: block;
+}
+
+.product-img.hover{
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.product-actions {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  column-gap: 0.5rem;
+}
+
+.action-btn {
+  width: 40px;
+  height: 40px;
+  line-height: 42px;
+  text-align: center;
+  border-radius: 50%;
+  background: var(--first-color-alt);
+  border: 1px solid var(--border-color);
+  color: var(--text-color);
+  font-size: var(--small-font-size);
+  position: relative;
+}
+
+.action-btn::before,
+.action-btn::after {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.action-btn::before {
+  content: '';
+  top: -2px;
+  border: 0.5rem solid transparent;
+  border-top-color: var(--first-color);
+}
+
+.action-btn::after {
+  content: attr(aria-label);
+  bottom: 100%;
+  background: var(--first-color);
+  color: var(--body-color);
+  font-size: var(--tiny-font-size);
+  font-weight: var(--weight-500);
+  white-space: nowrap;
+  padding-inline: 0.625rem;
+  border-radius: 0.25px;
+  line-height: 2.58;
+}
+
+.product-badge {
+  position: absolute;
+  left: 1.25rem;
+  top: 1.25rem;
+  background: var(--first-color);
+  color: var(--body-color);
+  padding: 0.25rem 0.625rem;
+  border-radius: 2.5rem;
+  font-size: var(--tiny-font-size);
+  font-weight: var(--weight-500);
+}
 
 /* Active Tab */
+.tab-btn.active-tab {
+  background: var(--second-color);
+  color: var(--first-color);
+}
+
+.tab-item:not(.active-tab) {
+  display: none;
+}
 
 /* Product Hover */
+.product-img.hover,
+.product-actions,
+.action-btn::before,
+.action-btn::after {
+  opacity: 0;
+}
 
 /*=============== DEALS ===============*/
 
