--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -127,6 +127,7 @@ input {
 
 .section {
   padding-block: 2rem;
+  overflow: hidden;
 }
 
 .section-lg {
@@ -148,6 +149,23 @@ input {
   height: 45px;
   border-radius: 0.25rem;
   font-size: var(--small-font-size);
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+  column-gap: 0.5rem;
+}
+
+.new-price {
+  color: var(--first-color);
+  font-weight: var(--weight-600);
+}
+
+.old-price {
+  color: var(--text-color-light);
+  font-size: var(--small-font-size);
+  text-decoration: line-through;
 }
 
 /*=============== HEADER & NAV ===============*/
@@ -198,11 +216,11 @@ input {
 }
 
 .nav-logo-img {
-  width: 150px;
+  width: 120px;
 }
 
 .nav-menu {
-  width: 100%;
+  flex-grow: 1;
   margin-left: 2.5rem;
 }
 
@@ -242,7 +260,7 @@ input {
 }
 
 .header-action-btn img {
-  width: 30px;
+  width: 24px;
 }
 
 .header-action-btn .count {
@@ -323,6 +341,21 @@ input {
   color: var(--first-color);
 }
 
+.btn-md,
+.btn-sm {
+  font-family: var(--body-font);
+}
+
+.btn-md {
+  height: 44px;
+  line-height: 42px;
+}
+
+.btn-sm {
+  height: 40px;
+  line-height: 36px;
+}
+
 /*=============== CATEGORIES ===============*/
 .category-item {
   text-align: center;
@@ -397,6 +430,7 @@ input {
 .product-item {
   border: 1px solid var(--border-color);
   border-radius: 1.5rem;
+  transition: all 0.2s var(--transition);
 }
 
 .product-banner {
@@ -407,6 +441,17 @@ input {
 .product-images {
   position: relative;
   display: block;
+  overflow: hidden;
+  border-radius: 1.25rem;
+}
+
+.product-img {
+  vertical-align: middle;
+  transition: all 1.5s var(--transition);
+}
+
+.product-item:hover .product-img {
+  transform: scale(1.1);
 }
 
 .product-img.hover{
@@ -422,6 +467,7 @@ input {
   transform: translate(-50%, -50%);
   display: flex;
   column-gap: 0.5rem;
+  transition: all 0.2 var(--transition);
 }
 
 .action-btn {
@@ -442,6 +488,7 @@ input {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
+  transition: all 0.3s cubic-bezier(0.71, 1.7, 0.77, 1.24);
 }
 
 .action-btn::before {
@@ -457,7 +504,6 @@ input {
   background: var(--first-color);
   color: var(--body-color);
   font-size: var(--tiny-font-size);
-  font-weight: var(--weight-500);
   white-space: nowrap;
   padding-inline: 0.625rem;
   border-radius: 0.25px;
@@ -473,7 +519,54 @@ input {
   padding: 0.25rem 0.625rem;
   border-radius: 2.5rem;
   font-size: var(--tiny-font-size);
-  font-weight: var(--weight-500);
+}
+
+.product-badge.light-pink {
+  background: hsl(341, 100%, 71%);
+}
+
+.product-badge.light-green {
+  background: hsl(155, 20%, 67%);
+}
+
+.product-badge.light-orange {
+  background: hsl(24, 100%, 73%);
+}
+
+.product-badge.light-pink {
+  background: hsl(202, 53%, 76%);
+}
+
+.product-content {
+  position: relative;
+  padding: 0 1.25rem 1.125rem;
+}
+
+
+.product-category {
+  color: var(--text-color-light);
+  font-size: var(--smaller-font-size);
+}
+
+.product-title {
+  font-size: var(--normal-font-size);
+  margin-block: 0.75rem 0.5rem;
+}
+
+.product-rating {
+  color: hsl(42, 100%, 50%);
+  font-size: var(--smaller-font-size);
+  margin-bottom: 0.75rem;
+}
+
+.product-price .new-price {
+  font-size: var(--large-font-size);
+}
+
+.cart-btn {
+  position: absolute;
+  bottom: 1.6rem;
+  right: 1.25rem;
 }
 
 /* Active Tab */
@@ -490,25 +583,504 @@ input {
 .product-img.hover,
 .product-actions,
 .action-btn::before,
-.action-btn::after {
+.action-btn::after,
+.product-item:hover .product-img.default {
   opacity: 0;
 }
 
+.product-item:hover {
+  box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.1);
+}
+
+.product-item:hover .product-img.hover,
+.product-item:hover .product-actions,
+.action-btn:hover::before,
+.action-btn:hover::after {
+  opacity: 1;
+}
+
+.action-btn:hover::before,
+.action-btn:hover::after {
+  transform: translateX(-50%) translateY(-0.5rem);
+}
+
+.action-btn:hover {
+  background: var(--first-color);
+  border-color: var(--first-color);
+  color: var(--body-color);
+}
+
 /*=============== DEALS ===============*/
+.deals-container {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.deals-item:nth-child(1) {
+  background-image: url(../img/deals-1.jpg);
+}
+
+.deals-item:nth-child(2) {
+  background-image: url(../img/deals-2.png);
+}
+
+.deals-item {
+  padding: 3rem;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
+}
+
+.deals-brand {
+  color: var(--first-color);
+  font-size: var(--h3-font-size);
+  margin-bottom: 0.25rem;
+}
+
+.deals-category {
+  font-family: var(--second-font);
+  font-size: var(--small-font-size);
+}
+
+.deals-title {
+  max-width: 240px;
+  font-size: var(--large-font-size);
+  font-weight: var(--weight-400);
+  line-height: 1.3;
+}
+
+.deals-price .new-price,
+.deals-price .old-price {
+  font-size: var(--large-font-size);
+}
+
+.deals-price .new-price {
+  color: hsl(352, 100%, 60%);
+}
+
+.deals-countdown-text {
+  margin-bottom: 0.25rem;
+}
+
+.countdown {
+  display: flex;
+  column-gap: 1.5rem;
+}
+
+.countdown-amount {
+  position: relative;
+}
+
+.countdown-amount::after {
+  content: ':';
+  color: var(--title-color);
+  font-size: var(--large-font-size);
+  position: absolute;
+  top: 20%;
+  right: -25%;
+}
+
+.countdown-period {
+  background-color: var(--first-color);
+  color: var(--body-color);
+  width: 60px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  border-radius: 0.25rem;
+  font-size: var(--large-font-size);
+  font-weight: var(--weight-600);
+  margin-bottom: 0.5rem;
+}
+
+.unit {
+  font-size: var(--small-font-size);
+  text-align: center;
+  display: block;
+}
+
+.deals-btn .btn {
+  background: transparent;
+  color: var(--first-color);
+}
 
 /*=============== NEW ARRIVALS ===============*/
+.new-arrivals {
+  overflow: hidden;
+}
 
 /*=============== SHOWCASE ===============*/
+.showcase-container {
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.showcase-wrapper .section-title {
+  font-size: var(--normal-font-size);
+  border-bottom: 1px solid var(--border-color-alt);
+  padding-bottom: 0.75rem;
+  margin-bottom: 2rem;
+  position: relative;
+}
+
+.showcase-wrapper .section-title::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1.3px;
+  width: 50px;
+  height: 2px;
+  background: var(--first-color);
+}
+
+.shoecase-item {
+  display: flex;
+  align-items: center;
+  column-gap: 1.5rem;
+}
+
+.shoecase-item:not(:last-child) {
+  margin-bottom: 1.5rem;
+}
+
+.showcase-img {
+  width: 86px;
+}
+
+.showcase-content {
+  width: calc(100% - 110px);
+}
+
+.showcase-title {
+  font-size: var(--small-font-size);
+  font-weight: var(--weight-500);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 0.5rem;
+}
 
 /*=============== NEWSLETTER ===============*/
+.newsletter {
+  background: hsl(166, 23%, 74%);
+}
+
+.home-newsletter {
+  margin-top: 2rem;
+}
+
+.newsletter-container {
+  grid-template-columns: repeat(2, 3.5fr) 5fr;
+  align-items: center;
+  column-gap: 3rem;
+  margin: 0 3rem;
+}
+
+.newsletter-title {
+  column-gap: 1rem;
+  font-size: var(--large-font-size);
+}
+
+.newsletter-icon {
+  width: 40px;
+}
+
+.newsletter-description {
+  color: var(--title-color);
+  font-family: var(--second-font);
+  font-size: var(--smaller-font-size);
+  font-weight: var(--weight-600);
+}
+
+.newsletter-form {
+  display: flex;
+}
+
+.newsletter-input,
+.newsletter-btn {
+  font-size: var(--small-font-size);
+}
+
+.newsletter-input {
+  background: var(--body-color);
+  padding-inline: 1.25rem;
+  width: 100%;
+  height: 48px;
+  border-radius: 0.25rem 0 0 0.25rem;
+}
+
+.newsletter-btn {
+  background: var(--title-color);
+  color: var(--body-color);
+  padding-inline: 2rem;
+  border-radius: 0 0.25rem 0.25rem 0;
+  font-family: var(--second-font);
+  font-weight: var(--weight-500);
+  letter-spacing: 0.5px;
+  cursor: pointer;
+  transition: 0.3s var(--transition);
+}
+
+.newsletter-btn:hover {
+  background: var(--first-color);
+}
 
 /*=============== FOOTER ===============*/
+.footer-container {
+  grid-template-columns: 4.5fr repeat(2, 2fr) 3.5fr;
+  padding-block: 2.5rem;
+}
+
+.footer-logo-img {
+  width: 120px;
+}
+
+.footer-subtitle {
+  color: var(--text-color-light);
+  font-size: var(--small-font-size);
+  margin-block: 1.25rem 0.625rem;
+}
+
+.footer-description {
+  margin-bottom: 0.25rem;
+}
+
+.footer-description span {
+  font-weight: var(--weight-600);
+}
+
+.footer-social .footer-subtitle {
+  margin-top: 1.875rem;
+}
+
+.footer-social-links {
+  column-gap: 0.25rem;
+}
+
+.footer-social-icon {
+  width: 20px;
+  opacity: 0.7;
+}
+
+.footer-title {
+  font-size: var(--large-font-size);
+  margin-block: 1rem 1.25rem;
+}
+
+.footer-link {
+  color: var(--title-color);
+  font-size: var(--small-font-size);
+  margin-bottom: 1rem;
+  display: block;
+  transition: all 0.3s var(--transition);
+}
+
+.footer-link:hover {
+  color: var(--first-color);
+  margin-left: 0.25rem;
+}
+
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  padding-block: 1.25rem;
+  border-top: 1px solid var(--border-color);
+}
+
+.copyright,
+.designer {
+  color: var(--text-color-light);
+  font-size: var(--small-font-size);
+}
 
 /*=============== BREADCRUMBS ===============*/
+.breadcrumb {
+  background: var(--container-color);
+  padding-block: 1.5rem;
+  margin-top: 0.5rem;
+}
+
+.breadcrumb-list {
+  column-gap: 0.75rem;
+  padding: 0 3rem;
+}
+
+.breadcrumb-link {
+  content: var(--text-color);
+  font-size: var(--small-font-size);
+}
 
 /*=============== SHOP ===============*/
+.total-products {
+  margin-bottom: 2.5rem;
+}
+
+.total-products span {
+  color: var(--first-color);
+  font-weight: var(--weight-600);
+}
+
+.pagination {
+  display: flex;
+  column-gap: 0.625rem;
+  margin-top: 2.75rem;
+}
+
+.pagination-link {
+  display: inline-block;
+  width: 34px;
+  height: 34px;
+  line-height: 34px;
+  text-align: center;
+  border-radius: 0.25rem;
+  color: var(--text-color);
+  font-size: var(--small-font-size);
+  font-weight: var(--weight-700);
+  transition: all 0.15s var(--transition);
+}
+
+.pagination-link.active,
+.pagination-link:hover {
+  background: var(--first-color);
+  color: var(--body-color);
+}
+
+.pagination-link.icon {
+  border-top-right-radius: 50%;
+  border-bottom-right-radius: 50%;
+}
 
 /*=============== DETAILS ===============*/
+.details-container {
+  grid-template-columns: 5.5fr 6.5fr;
+}
+
+.details-img {
+  margin-bottom: 0.5rem;
+}
+
+.details-small-images {
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 0.625rem;
+}
+
+.details-small-img {
+  width: 129.6px;
+  cursor: pointer;
+}
+
+.details-title {
+  font-size: var(--h2-font-size);
+}
+
+.details-brand {
+  font-size: var(--small-font-size);
+  margin-block: 1rem;
+}
+
+.details-brand span {
+  color: var(--first-color);
+}
+
+.detailes-price {
+  border-top: 1px solid var(--border-color-alt);
+  border-bottom: 1px solid var(--border-color-alt);
+  padding-block: 1rem;
+  column-gap: 1rem;
+}
+
+.detailes-price .new-price {
+  font-size: var(--h2-font-size);
+}
+
+.detailes-price .old-price {
+  font-size: var(--normal-font-size);
+  font-weight: var(--weight-500);
+}
+
+.short-description {
+  margin-block: 1rem 2rem;
+}
+
+.list-item,
+.meta-list {
+  font-size: var(--small-font-size);
+  margin-bottom: 0.75rem;
+}
+
+.details-color,
+.details-size {
+  column-gap: 0.75rem;
+}
+
+.details-color {
+  margin-block: 2rem 1.5rem;
+}
+
+.details-size {
+  margin-bottom: 2.5rem;
+}
+
+.details-color-title,
+.details-size-title {
+  font-size: var(--small-font-size);
+  font-weight: var(--weight-600);
+}
+
+.color-list,
+.size-list {
+  display: flex;
+  column-gap: 0.25rem;
+}
+
+.color-link {
+  width: 26px;
+  height: 26px;
+  border-radius: 50%;
+  display: block;
+}
+
+.size-link {
+  border: 1px solid var(--border-color-alt);
+  padding: 0.375rem 0.75rem 0.5rem;
+  color: var(--text-color);
+  font-size: var(--small-font-size);
+}
+
+.size-active {
+  background: var(--first-color);
+  color: var(--body-color);
+}
+
+.details-action {
+  display: flex;
+  column-gap: 0.375rem;
+  margin-bottom: 3.25rem;
+}
+
+.quantity,
+.details-action-btn {
+  border: 1px solid var(--border-color-alt);
+  font-size: var(--small-font-size);
+}
+
+.quantity {
+  max-width: 80px;
+  padding-block: 0.5rem;
+  padding-inline: 1rem 0.5rem;
+  border-radius: o.25rem;
+}
+
+.details-action-btn {
+  color: var(--text-color);
+  line-height: 40px;
+  padding-inline: 0.75rem;
+}
+
+.details-meta {
+  border-top: 1px solid var(--border-color-alt);
+  padding-top: 1rem;
+}
 
 /*=============== DETAILS INFO & REVIEWS ===============*/
 
